2002-05-15  Damien Sandras  <dsandras@seconix.com>

	* pixmaps/gnomemeeting-logo.png: Updated the logo.

	* src/menu.cpp: Do not disable DND or AA.
	
2002-05-15  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added the same for the audio codec.
	Changed GetCurrentAudioCodec and GetCurrentVideoCodec
	to use the internal values.
	
2002-05-15  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added internal variables that is the current
	video codec that is used. Only for internal use. External methods
	should use GetCurrentVideoCodec ().
	
2002-05-14  Kenneth Rohde Christiansen  <kenneth@gnu.org>

        * Makefile.am: Oops, I was changing the intltool*.in files
	aswell :( - Well this should fix it.


2002-05-14  Kenneth Rohde Christiansen  <kenneth@gnu.org>

        * Makefile.am: Changed the rule a bit
        * gnomemeeting-config-tool.in: Fixed a few problems.


2002-05-14  Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Removed unuseful callbacks about the remote/local
	menu.

	* src/common.h: Added GtkTextView pointer for the history and rename
	the former log_text in history.

	* src/config.cpp: Fixed last bugs, added notifier that checks 
	if forwarding settings can be applied.

	* src/connection.cpp: Removed use of SetCurrentDisplay 
	(not needed anymore).

	* src/endpoint.cpp: Removed use of SetCurrentDisplay 
	(not needed anymore). Changed place where the vq is set.
	
	* src/gdkvideoio.cpp: Removed use of SetCurrentDisplay 
	(not needed anymore).

	* src/main_window.cpp: Changed the size of the main_notebook.

	* src/menu.cpp: Removed calls to unuseful old callbacks.

	* src/misc.cpp: Fixed bug in the PAssertFunction.

	* src/pref_window.cpp: Removed cout.

2002-05-14  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* Makefile.am: Added a new rule
	* gnomemeeting-config-tool.in: New script to fix GConf problems
	* src/config-tool-i18n.h: File to allow translation of the tool
	* po/POTFILES.in: Added the header file.