@@ -170,7 +170,7 @@
       <applyto>/apps/gnomemeeting/audio_codecs/list</applyto>
       <owner>GnomeMeeting</owner>
       <type>string</type>
-      <default>GSM-06.10=1:MS-GSM=1:G.726-16k=1:G.726-32k=1:G.711-uLaw-64k=1:G.711-ALaw-64k=1:LPC10=1</default>
+      <default>GSM-06.10=1:MS-GSM=1:G.726-24k=1:G.726-32k=1:G.711-uLaw-64k=1:G.711-ALaw-64k=1:LPC10=1</default>
       <locale name="C">
 	<short>The Audio Codecs List</short>
 	<long>The Audio Codecs List</long>
