@@ -1,5 +1,13 @@
 2002-05-15  Damien Sandras  <dsandras@seconix.com>
 
+	* src/pref_window.cpp: Replaced buggy G726-16k by G.726-24k.
+
+	* src/endpoint.cpp: Replaced buggy G726-16k by G.726-24k.
+
+	* src/main_window.cpp: More explicit Gconf message.
+	
+2002-05-15  Damien Sandras  <dsandras@seconix.com>
+
 	* pixmaps/gnomemeeting-logo.png: Updated the logo.
 
 	* src/menu.cpp: Do not disable DND or AA.
